# stack-zero

./: .env-template  .gitignore  Cargo.toml  README.md  justfile  stack-zero.toml.template
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: user.rs
examples/: simple.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240823_000001_create_user_table.rs  m20240910_163755_add_user_password.rs
migrations/2023-12-15-091846_create_users/: up.sql
src/: api.rs  auth0.rs  env_renderer.rs  lib.rs  schema.rs  test_helper.rs
src/email/: config.rs  verification.rs
src/identity/: id_token.rs
src/user/: users.rs
stack-zero/: Cargo.toml
stack-zero/examples/: simple.rs
stack-zero/src/: anyhow.rs  api.rs  auth0.rs  config.rs  email_verification.rs  lib.rs  main.rs  respond.rs  schema.rs  session.rs  test_helper.rs  user.rs  view_renderer.rs
stack-zero/src/email/: config.rs  mod.rs  verification.rs
stack-zero/src/user/: users.rs
