[package]
name = "stack-zero"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
api = { path = "api" }

axum = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-enum-str = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
sea-orm = { workspace = true }
tera = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
password-auth = "1.0.0"
utoipa = "4.2.3"
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
validator = { version = "0.18.1" }
# Email
css-inline = { version = "0.14.1" }
toml = { version = "0.8.9" }

[dev-dependencies]
bollard = { workspace = true }
rstest = { workspace = true }

[workspace]
resolver = "2"
members = ["migration", "entity", "api"]

[workspace.dependencies]
dotenv = "0.15.0"
axum = "0.7.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.75"
url = { version = "2.5.0", features = ["serde"] }
reqwest = { version = "0.11.22" , features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde-enum-str = "0.4.0"
jsonwebtoken = "9.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
tera = { version = "1.20.0" }

# ssl: Seems to be needed for pulling images from docker hub.
bollard = { version = "0.17.1", features = ["ssl"] }
rstest = { version = "0.18.2" }
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls", "with-chrono", "with-json", "with-uuid"] }
derive_more = { version = "0.99.17" }
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["fs"] }
futures-util = { version = "0.3.30" }
tower-sessions = { version = "0.12.3" }
tower-sessions-redis-store = { version = "0.13.0" }