[package]
name = "stack-zero"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
axum = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-enum-str = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
sea-orm = { workspace = true }
tera = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
bollard = { workspace = true }
rstest = { workspace = true }
